--- a/app/src/main/res/drawable/splashscreen.xml
+++ b/app/src/main/res/drawable/splashscreen.xml
@@ -2,8 +2,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/white"/>
     <item>
-        <bitmap android:src="@drawable/splashlogo" android:gravity="center">
-
-        </bitmap>
+        <bitmap android:src="@drawable/splashlogo" android:gravity="center"/>
     </item>
 </layer-list>
