--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,9 @@
 <resources>
     <color name="white">#ffff</color>
     <color name="selected">#00C894</color>
+    <color name="buttonPressed">#FF6F91</color>
+    <color name="main">#6A70D6</color>
+    <color name="mainLight">#ADA9E0</color>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
