--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,11 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="240dp"
+        android:background="@color/main"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/tp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tp" />
+
+    <TimePicker
+        android:id="@+id/tp"
+        android:layout_width="320dp"
+        android:layout_height="340dp"
+        android:layout_below="@id/startbutton"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="48dp"
+        android:amPmTextColor="#000000"
+        android:headerBackground="@color/main"
+        android:numbersBackgroundColor="#F0F0F0"
+        android:numbersSelectorColor="@color/mainLight"
+        android:numbersTextColor="#000000"
+        android:timePickerMode="clock"
+        app:layout_constraintBottom_toTopOf="@+id/startbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/startbutton"
         android:layout_width="173dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="182dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/button_style"
         android:fontFamily="@font/comfortaa_light"
         android:text="СТАРТ"
@@ -20,6 +50,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="46dp"
+        android:fontFamily="@font/comfortaa_light"
+        android:text="Поставьте будильник :"
+        android:textAlignment="textStart"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
