--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,7 +59,7 @@
         android:layout_marginEnd="46dp"
         android:fontFamily="@font/comfortaa_light"
         android:text="Поставьте будильник :"
-        android:textAlignment="textStart"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
